new proj/src/objects/GE_ES_ITO_Component__c.object
<CustomObject>
    <description>This object contains the Parts related to an Asset that GE Energy Sells.</description>
    <fields>
        <fullName>Expected_Life_Months__c</fullName>
        <label>Expected Life (Months)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account__c</fullName>
        <formula>GE_ES_Equipment_Name__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Actual_Filter_Life_Months__c</fullName>
        <label>Actual Filter Life ( Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Air_to_Cloth__c</fullName>
        <formula>IF( 
AND( 
ISPICKVAL(GE_ES_Filter_Type__c, &apos;Bag&apos;) , 
GE_ES_Diameter__c &lt;&gt;0, 
GE_ES_Length__c&lt;&gt;0, 
GE_ES_Quantity__c&lt;&gt;&apos;0&apos; 
), 
(GE_ES_Equipment_Name__r.GE_ES_Air_Volume_ACFM__c/((GE_ES_Diameter__c *3.14*GE_ES_Length__c/144)*VALUE(GE_ES_Quantity__c))), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Air to Cloth = (ACFM / ([diameter x 3.14 x Length / 144] X Qty of bags)) &amp; Filter Type = Bag</inlineHelpText>
        <label>Air to Cloth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Application__c</fullName>
        <formula>TEXT( GE_ES_Equipment_Name__r.GE_ES_Application__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Average_Filter_Life_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Filter Life (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Average_Life_Months__c</fullName>
        <label>Average Life (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bag_Cartridge_Number__c</fullName>
        <label>Bag/Cartridge Number (Change to Part Num</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Body__c</fullName>
        <label>Body</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bottom__c</fullName>
        <label>Bottom</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_COATED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COATED?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cal_Next_Buy_Date__c</fullName>
        <formula>IF(NOT( ISNULL(GE_ES_Date_Installed_Approx__c)) , 
(GE_ES_Date_Installed_Approx__c + ( GE_ES_Filter_Life_FL__c *30)), 

IF(NOT( ISNULL( GE_ES_Sold_Date__c )), 
(GE_ES_Sold_Date__c + ( GE_ES_Filter_Life_FL__c *30)) , 
( null)) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Buy Date(Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Competitior_Part_2__c</fullName>
        <label>Competitior Part # 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Competitor_Partnumber__c</fullName>
        <label>Competitior Part #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Competitor_Raw_material__c</fullName>
        <label>Competitor Raw material</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Component_Status__c</fullName>
        <label>Component Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Components__c</fullName>
        <label>Components</label>
        <picklist>
            <picklistValues>
                <fullName>1SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SSh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2SSh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3SSh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOZZLE Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Construction__c</fullName>
        <label>Construction</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Current_Supplier__c</fullName>
        <label>Current Supplier</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Part__c</fullName>
        <label>Customer Part #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Reference__c</fullName>
        <formula>GE_ES_Equipment_Name__r.GE_ES_Customer_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Date_Installed_Approx__c</fullName>
        <label>Date Installed (Approx)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Date_of_Last_Purchase__c</fullName>
        <label>Date of Last Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Depth_of_Pleat__c</fullName>
        <label>Depth of Pleat</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Description_of_Part__c</fullName>
        <label>Description of Part</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Diameter__c</fullName>
        <label>Diameter</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equipment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment Name</label>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Equipment_Record_Type__c</fullName>
        <description>Populating Parent Equipment “Record Type”.</description>
        <formula>GE_ES_Equipment_Name__r.GE_ES_Record_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Expected_Next_Buy__c</fullName>
        <label>Next Buy Date (User Entered)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filter_Diameter__c</fullName>
        <label>Filter Diameter</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filter_Efficiency__c</fullName>
        <label>Filter Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>G1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filter_Length__c</fullName>
        <label>Filter Length</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filter_Life_FL__c</fullName>
        <formula>IF(OR(GE_ES_Actual_Filter_Life_Months__c=0, ISNULL(GE_ES_Actual_Filter_Life_Months__c) ) ,  GE_ES_Average_Filter_Life_Months__c  , GE_ES_Actual_Filter_Life_Months__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filter_OEM__c</fullName>
        <label>Component OEM</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camfil Farr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donaldson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freudenberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwesco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mikropor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pneumafil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premaberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filter_Type__c</fullName>
        <label>Filter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulse Pleat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filters_of_this_type_installed__c</fullName>
        <label>Filters of this type installed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Filtration_Stage__c</fullName>
        <label>Filtration Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Coalescer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Filter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Final_Next_Buy_Date__c</fullName>
        <formula>IF( GE_ES_User_Entered_Next_Buy_Date__c =True, GE_ES_Expected_Next_Buy__c , GE_ES_Cal_Next_Buy_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Buy Date (Final)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Flat_Width__c</fullName>
        <label>Flat Width</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_GE_Part_Number__c</fullName>
        <label>GE Part Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Ground_Wire__c</fullName>
        <label>Ground Wire</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_In_Service_Date__c</fullName>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Inner_Core_Material__c</fullName>
        <label>Inner Core Material</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Base_Record_Type__c</fullName>
        <formula>GE_ES_Equipment_Name__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Base Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Hydrophobic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed Hydrophobic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Media_Other__c</fullName>
        <label>Installed Media Other</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Media__c</fullName>
        <label>Installed Media</label>
        <picklist>
            <picklistValues>
                <fullName>Cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Glass Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Nanomedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Part_Number_1__c</fullName>
        <label>Installed Part #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Part_Number_2__c</fullName>
        <label>Installed Part # 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Type__c</fullName>
        <label>Installed Type</label>
        <picklist>
            <picklistValues>
                <fullName>Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minipleat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Cartridge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed__c</fullName>
        <label>Installed</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donaldson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freudenberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camfil Farr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premaberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mikropor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwesco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pneumafil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Inventory__c</fullName>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Last_Price_Paid__c</fullName>
        <label>Last Price Paid</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Last_Sale_Price__c</fullName>
        <label>Last Sale Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Length__c</fullName>
        <label>Length</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Metric_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metric Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Code_Current__c</fullName>
        <formula>Text(GE_ES_Equipment_Name__r.GE_ES_OEM_Code_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Filter_Efficiency__c</fullName>
        <label>OEM Filter Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>G1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Hydrophobic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OEM Hydrophobic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Media_Other__c</fullName>
        <label>OEM Media Other</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Media__c</fullName>
        <label>OEM Media</label>
        <picklist>
            <picklistValues>
                <fullName>Cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Cellulose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Glass Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic Nanomedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Part__c</fullName>
        <label>OEM Part #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM_Type__c</fullName>
        <label>OEM Type</label>
        <picklist>
            <picklistValues>
                <fullName>Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minipleat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Cartridge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Pleat_Count__c</fullName>
        <label>Pleat Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Pleat_Depth__c</fullName>
        <label>Pleat Depth</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product_Type__c</fullName>
        <label>Product Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Pulse_Cart_Sz__c</fullName>
        <label>Pulse Cartridge Size</label>
        <picklist>
            <picklistValues>
                <fullName>Braden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quantity__c</fullName>
        <label>Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Raw_Material__c</fullName>
        <label>Raw Material</label>
        <picklist>
            <picklistValues>
                <fullName>AC - AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC803</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA - BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - CX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL - GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL052</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL054</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL056</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL057</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL059</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Reason_for_Failure__c</fullName>
        <label>Reason for Failure</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Repair_Kit_Part_Number__c</fullName>
        <label>Repair Kit Part Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sampled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sampled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Scr_End_Cap_Matrl__c</fullName>
        <label>Screen/End Cap Material</label>
        <picklist>
            <picklistValues>
                <fullName>Galvanized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stainless</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sold_Date__c</fullName>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Special_Hardware__c</fullName>
        <label>Special Hardware</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Static_Filter_mmXmmXmm__c</fullName>
        <label>Static Filter (mmXmmXmm)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tapered_Bag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tapered Bag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Top__c</fullName>
        <label>Top</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_User_Entered_Next_Buy_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>&quot;If the parameters for the calculated field are not available, you can manually override the next expected buy date by selecting this checkbox and entering the correct date&quot;</inlineHelpText>
        <label>User Entered Next Buy Date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Seibel_Row_ID_of_Asset_Unique_Indentifi__c</fullName>
        <label>Seibel Row ID of Asset (Unique Indentifi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>GE_ES_Filter_Type__c</columns>
        <columns>GE_ES_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GE_ES_ITO_Component__c.GE_ES_ES_Filter</value>
        </filters>
        <label>All Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>ES_GE_GIB_Filter</fullName>
        <active>true</active>
        <description>Environmental Services Filter Product</description>
        <label>GIB Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_ES_CAGES</fullName>
        <active>true</active>
        <description>This record type is used for Environmental Services</description>
        <label>CAGES</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_ES_Filter</fullName>
        <active>true</active>
        <description>This record type is used for Environmental Services</description>
        <label>Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_ES_GT_Filters</fullName>
        <active>true</active>
        <description>This record type is used for Environmental Services</description>
        <label>GT-Filters</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_ES_Parts</fullName>
        <active>true</active>
        <description>This record type is used for Environmental Services</description>
        <label>Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_Install_Base</fullName>
        <active>true</active>
        <description>This record type is used for Install Base</description>
        <label>GIB Install Base</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>